--- a/config.json
+++ b/config.json
@@ -1,10 +1,11 @@
 {
     "window": {
         "main": {
-            "bg": [0,0,0]
+            "bg": [8,40,170]
         },
         "overlay": {
             "bg": [4,250,0]
         }
-    }
+    },
+    "rate": 2
 }
