--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ if(APPLE)
         "-framework CoreServices"
     )
 endif()
+target_link_libraries(AAToolCPP PRIVATE "-lpthread")
 target_link_libraries(AAToolCPP PUBLIC sfml-graphics sfml-window sfml-system)
 target_link_libraries(AAToolCPP PRIVATE fmt::fmt)
 target_link_libraries(AAToolCPP PRIVATE nlohmann_json::nlohmann_json)
