--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 # See https://cliutils.gitlab.io/modern-cmake/chapters/basics.html
-cmake_minimum_required(VERSION 3.14)
+# Require 3.25 due to SYSTEM in FetchContent_Declare calls.
+cmake_minimum_required(VERSION 3.25)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # We need this lol.
 option(SANITIZE "Whether or not to sanitize builds" "NO_SANITIZE")
@@ -15,6 +16,7 @@ set(CMAKE_CXX_STANDARD
     CACHE STRING "The C++ standard to use")
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(DOWNLOAD_EXTRACT_TIMESTAMP ON)
 
 include(FetchContent)
 
@@ -26,16 +28,28 @@ include(FetchContent)
 FetchContent_Declare(
     fmt
     GIT_REPOSITORY https://github.com/fmtlib/fmt.git
-    GIT_TAG master)
+    GIT_TAG master
+    SYSTEM)
 FetchContent_MakeAvailable(fmt)
 
 FetchContent_Declare(SFML
     GIT_REPOSITORY https://github.com/SFML/SFML.git
-    GIT_TAG 2.6.x)
+    GIT_TAG 2.6.x
+    SYSTEM)
 FetchContent_MakeAvailable(SFML)
 
+# We would use fetchcontent but nlohmann json is...
+# it doesn't appear to have proper cmake setup for that.
+# Not sure what's going on with that but we just download it.
+#FetchContent_Declare(json
+#    URL https://github.com/nlohmann/json/releases/download/v3.11.2/json.tar.xz
+#    SYSTEM)
+#FetchContent_MakeAvailable(json)
+# Also note: https://github.com/nlohmann/json/pull/4080
 FetchContent_Declare(json
-    URL https://github.com/nlohmann/json/releases/download/v3.11.2/json.tar.xz)
+    GIT_REPOSITORY https://github.com/nlohmann/json
+    GIT_TAG v3.11.2
+    SYSTEM)
 FetchContent_MakeAvailable(json)
 
 add_executable(
@@ -68,4 +82,6 @@ target_link_libraries(AAToolCPP PUBLIC sfml-graphics sfml-window sfml-system)
 target_link_libraries(AAToolCPP PRIVATE fmt::fmt)
 target_link_libraries(AAToolCPP PRIVATE nlohmann_json::nlohmann_json)
 
-file(COPY ${PROJECT_BINARY_DIR}/compile_commands.json DESTINATION ${PROJECT_SOURCE_DIR})
+if (EXISTS ${PROJECT_BINARY_DIR}/compile_commands.json)
+    file(COPY ${PROJECT_BINARY_DIR}/compile_commands.json DESTINATION ${PROJECT_SOURCE_DIR})
+endif()
