--- a/config.json
+++ b/config.json
@@ -7,5 +7,8 @@
             "bg": [4,250,0]
         }
     },
-    "rate": 2
+    "rate": 2,
+    "instance": {
+        "saves": "testing/"
+    }
 }
