--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ set(CMAKE_CXX_STANDARD
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(DOWNLOAD_EXTRACT_TIMESTAMP ON)
+set(FETCHCONTENT_UPDATES_DISCONNECTED ON)
 
 include(FetchContent)
 
