/overlay: Lots of configuration improvements. Now mostly working on rendering tasks.

--- a/config.json
+++ b/config.json
@@ -1,4 +1,10 @@
 {
+    "overlay": {
+        "criteria-y": 10,
+        "criteria-size": 24,
+        "criteria-padding": 1,
+        "frame": "none"
+    },
     "window": {
         "close-on": "any",
         "main": {
