--- a/config.json
+++ b/config.json
@@ -3,15 +3,20 @@
         "criteria-y": 10,
         "criteria-size": 24,
         "criteria-padding": 1,
+        "advancement-padding": 16,
+        "advancement-font-size": 12,
+        "antialiasing": false,
         "frame": "none"
     },
     "window": {
         "close-on": "any",
         "main": {
-            "bg": [8,40,170]
+            "bg": [8,40,170],
+            "title": "trAAcker has configurable window titles! (for some reason...)"
         },
         "overlay": {
-            "bg": [4,250,0]
+            "bg": [4,250,0],
+            "title": "trAAcker OBS Overlay :)"
         }
     },
     "rate": 3,
