/focus: WIP still. Some API changes and config additions, working on fully fleshed out file provision.

--- a/config.json
+++ b/config.json
@@ -20,9 +20,7 @@
         }
     },
     "rate": 3,
-    "instance": {
-        "saves": "testing/"
-    },
+    "instances": ["testing/"],
     "log": "aatool.log",
     "vsync": true,
     "verbose": true,
