/focus: WORKING. IT WORKS. IT ACTUALLY WORKS.

--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
         }
     },
     "rate": 3,
-    "instances": ["testing/"],
+    "instances": [],
     "log": "aatool.log",
     "vsync": true,
     "verbose": true,
